[package]
name = "libp2p-relay-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
libp2p = { version = "0.53.2", features = ["relay", "tokio", "tcp", "noise", "yamux", "ping", "identify", "macros", "dcutr", "autonat"] }
