[package]
name = "libp2p-relay-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
futures = "0.3.30"
futures-timer = "3.0.3"
libp2p = { version = "0.53.2", features = ["relay", "tokio", "tcp", "noise", "yamux", "ping", "identify", "macros", "dcutr", "autonat", "dns"] }
tokio = { version = "1.37.0", features = ["macros"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
